k8s-manifests/testbed/violating-privileged-debugger.yaml
# Pod Security Standards 위반(disallow-privileged-containers 및 require-resource-limits) 감지를 검증하기 위한 특권 모드 디버거 파드
apiVersion: v1
kind: Pod
metadata:
  name: violating-privileged-debugger
  namespace: governance-testbed
  labels:
    app: violating-privileged-debugger
spec:
  containers:
    - name: debugger
      image: alpine:3.19
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
